--- a/index.html
+++ b/index.html
@@ -1015,12 +1015,14 @@
                     <div class="small-col-inside">
 
                         <!--begin contact-form-wrapper-->
-                        <div class="contact-form-wrapper wow bounceIn" data-wow-delay="0.5s"
-                            style="visibility: visible; animation-delay: 0.5s; animation-name: bounceIn;">
+                        <div class="contact-form-wrapper wow bounceIn text-right" data-wow-delay="0.5s"
+                            style="visibility: visible; animation-delay: 0.5s; animation-name: bounceIn;" dir="ltr">
 
-                            <h3>Get started today</h3>
+                            <h3>هذا النص هو مثال لنص</h3>
 
-                            <p>Quis autem velis ets reprehender quiste voluptate.</p>
+                            <p>
+                                هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة
+                            </p>
 
                             <!--begin form-->
                             <div>
@@ -1031,21 +1033,22 @@
                                 <!--end success message -->
 
                                 <!--begin contact form -->
-                                <form id="contact-form" class="contact-form contact"
+                                <form id="contact-form" class="contact-form contact text-right" dir="ltr"
                                     action="https://demo.epic-webdesign.com/tf-salespage/v10-beauty/php/contact.php"
                                     method="post">
 
                                     <input class="contact-input white-input" required="" name="contact_names"
-                                        placeholder="Your Name*" type="text">
+                                        placeholder="ادخل اسمك*" type="text">
 
                                     <input class="contact-input white-input" required="" name="contact_phone"
-                                        placeholder="Phone Number*" type="text">
+                                        placeholder="رقم الهاتف*" type="text">
 
                                     <input class="contact-input white-input" required="" name="contact_email"
-                                        placeholder="Email Adress*" type="email">
+                                        placeholder="البريد الالكتروني*" type="email">
 
                                     <textarea class="contact-input white-input" rows="2" cols="20"
-                                        name="contact_message" placeholder="Your Message..."></textarea>
+                                        name="contact_message" placeholder="رسالتك">
+                                    </textarea>
 
                                     <input value="Get In Touch" class="contact-submit" type="submit">
 
