--- a/index.html
+++ b/index.html
@@ -160,17 +160,18 @@
                 <!--end col-sm-6-->
 
                 <!--begin col-md-6-->
-                <div class="col-md-6 padding-top-20">
+                <div class="col-md-6 padding-top-20 text-right">
 
-                    <h3>Best Micellar Technology.</h3>
+                    <h3>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة،</h3>
 
-                    <p>Velis demo enim ipsam voluptatem quia voluptas sit aspernatur netsum lorem fugit, seditum netis
-                        velas matrix net nesciunt.</p>
+                    <p>
+                        هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم تولي،
+                    </p>
 
                     <ul class="benefits">
-                        <li><i class="fas fa-check"></i> Quias netus magni netsum eos qui ratione sequi.</li>
-                        <li><i class="fas fa-check"></i> Venis ratione sequi netus enim quia tempor magni.</li>
-                        <li><i class="fas fa-check"></i> Enim ipsam netus voluptatem quia voluptas.</li>
+                        <li>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة <i class="fas fa-check"></i></li>
+                        <li>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة <i class="fas fa-check"></i></li>
+                        <li>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة <i class="fas fa-check"></i></li>
                     </ul>
 
                     <a href="#process" class="btn-pink small scrool">Discover More</a>
@@ -199,9 +200,9 @@
                 <!--begin col-md-12 -->
                 <div class="col-md-12 text-center margin-bottom-30">
 
-                    <h2 class="section-title">Amazing Results In Just 3 Easy Steps</h2>
+                    <h2 class="section-title">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</h2>
 
-                    <p class="section-subtitle">Tendas tempor ante acu ipsum lorem quam etsum nets.</p>
+                    <p class="section-subtitle">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</p>
 
                 </div>
                 <!--end col-md-12 -->
@@ -228,10 +229,11 @@
 
                             <img src="images/our-services3.jpg" class="width-100" alt="pic">
 
-                            <h3><a href="#">Choose Micellar Water</a></h3>
+                            <h3><a href="#">هذا النص هو مثال لنص</a></h3>
 
-                            <p>Curabitur quam etsum lacus net netsum nulat iaculis etsimun vitae etsum nisle varius
-                                netsum.</p>
+                            <p>
+                                هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة
+                            </p>
 
                         </div>
 
@@ -245,10 +247,9 @@
 
                             <img src="images/our-services1.jpg" class="width-100" alt="pic">
 
-                            <h3><a href="#">Saturate Cotton Pad</a></h3>
+                            <h3><a href="#">هذا النص هو مثال لنص</a></h3>
 
-                            <p>Curabitur quam etsum lacus net netsum nulat iaculis etsimun vitae etsum nisle varius
-                                netsum.</p>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</p>
 
                         </div>
 
@@ -262,10 +263,11 @@
 
                             <img src="images/our-services2.jpg" class="width-100" alt="pic">
 
-                            <h3><a href="#">Removes Makeup</a></h3>
+                            <h3><a href="#">هذا النص هو مثال لنص</a></h3>
 
-                            <p>Curabitur quam etsum lacus net netsum nulat iaculis etsimun vitae etsum nisle varius
-                                netsum.</p>
+                            <p>
+                                هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة
+                            </p>
 
                         </div>
 
@@ -607,9 +609,9 @@
                 <!--begin col-md-12 -->
                 <div class="col-md-12 text-center margin-bottom-30">
 
-                    <h2 class="section-title">Amazing Benefits</h2>
+                    <h2 class="section-title">هذا النص هو مثال لنص</h2>
 
-                    <p class="section-subtitle">Discover how micellar water can improve your skin.</p>
+                    <p class="section-subtitle">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</p>
 
                 </div>
                 <!--end col-md-12 -->
@@ -637,10 +639,11 @@
 
                             <i class="fas fa-mortar-pestle"></i>
 
-                            <h4>Sensitive Skin Safe</h4>
+                            <h4>هذا النص هو مثال لنص</h4>
 
-                            <p>Curabitur quam etsum lacus net netsum nulat iaculis etsimun vitae etsum nisle varius
-                                netsum.</p>
+                            <p>
+                                هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة
+                            </p>
 
                         </div>
 
@@ -655,10 +658,11 @@
 
                             <i class="fas fa-hand-holding-heart"></i>
 
-                            <h4>24 Hour Hydration</h4>
+                            <h4>هذا النص هو مثال لنص</h4>
 
-                            <p>Curabitur quam etsum lacus net netsum nulat iaculis etsimun vitae etsum nisle varius
-                                netsum.</p>
+                            <p>
+                                هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة
+                            </p>
 
                         </div>
 
@@ -673,10 +677,9 @@
 
                             <i class="fas fa-bong"></i>
 
-                            <h4>Cleansing Water</h4>
+                            <h4>هذا النص هو مثال لنص</h4>
 
-                            <p>Curabitur quam etsum lacus net netsum nulat iaculis etsimun vitae etsum nisle varius
-                                netsum.</p>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</p>
 
                         </div>
 
@@ -691,10 +694,11 @@
 
                             <i class="fas fa-gifts"></i>
 
-                            <h4>Amazing Benefits</h4>
+                            <h4>هذا النص هو مثال لنص</h4>
 
-                            <p>Curabitur quam etsum lacus net netsum nulat iaculis etsimun vitae etsum nisle varius
-                                netsum.</p>
+                            <p>
+                                هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة
+                            </p>
 
                         </div>
 
@@ -709,10 +713,9 @@
 
                             <i class="fas fa-thumbs-up"></i>
 
-                            <h4>Sensitive Skin Safe</h4>
+                            <h4>هذا النص هو مثال لنص</h4>
 
-                            <p>Curabitur quam etsum lacus net netsum nulat iaculis etsimun vitae etsum nisle varius
-                                netsum.</p>
+                            <p>هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة</p>
 
                         </div>
 
@@ -727,10 +730,11 @@
 
                             <i class="fas fa-atom"></i>
 
-                            <h4>Purifies Pores</h4>
+                            <h4>هذا النص هو مثال لنص</h4>
 
-                            <p>Curabitur quam etsum lacus net netsum nulat iaculis etsimun vitae etsum nisle varius
-                                netsum.</p>
+                            <p>
+                                هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة
+                            </p>
 
                         </div>
 
@@ -756,10 +760,10 @@
         <div class="container">
 
             <!--begin row-->
-            <div class="row">
+            <div class="row justify-content-center">
 
                 <!--begin col-md-6-->
-                <div class="col-md-6">
+                <div class="col-md-6 d-flex justify-content-center">
 
                     <img src="images/doctor2.png" class="w-75 margin-right-15 box-shadow" alt="pic">
 
@@ -905,7 +909,7 @@
     <!--end section-white-->
 
     <!--begin faq section -->
-    <section class="section-grey section-bottom-border" id="faq">
+    <section class="section-grey section-bottom-border text-right" id="faq">
 
         <!--begin container -->
         <div class="container">
@@ -916,9 +920,11 @@
                 <!--begin col-md-12-->
                 <div class="col-md-12 text-center padding-bottom-10">
 
-                    <h2 class="section-title">Frequently Asked Questions</h2>
+                    <h2 class="section-title">هذا النص هو مثال لنص</h2>
 
-                    <p class="section-subtitle">Quis autem velis ets reprehender net etid quiste voluptate.</p>
+                    <p class="section-subtitle">
+                        هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة
+                    </p>
 
                 </div>
                 <!--end col-md-12 -->
@@ -934,21 +940,35 @@
 
                     <div class="faq-box">
 
-                        <h5>Velit ut tortizi pretium viverra suspendisse?</h5>
+                        <h5>هذا النص هو مثال لنص</h5>
 
-                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper nets suscipit ets lobotis nisle
-                            consequat nihis etim. Quis autem velis ets reprehender net etid quiste voluptate velite esse
-                            sedis.</p>
+                        <p>
+                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
+                            العربى، حيث يمكنك أن تولد مثل هذا
+                            النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.
+                            إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد،
+                            النص لن يبدو مقسما ولا يحوي
+                            أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير
+                            من الأحيان أن يطلع على صورة
+                            حقيقية لتصميم الموقع.
+                        </p>
 
                     </div>
 
                     <div class="faq-box">
 
-                        <h5>Maecenas volutpat blandit etiam?</h5>
+                        <h5>هذا النص هو مثال لنص</h5>
 
-                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper nets suscipit ets lobotis nisle
-                            consequat nihis etim. Quis autem velis ets reprehender net etid quiste voluptate velite esse
-                            sedis.</p>
+                        <p>
+                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
+                            العربى، حيث يمكنك أن تولد مثل هذا
+                            النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.
+                            إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد،
+                            النص لن يبدو مقسما ولا يحوي
+                            أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير
+                            من الأحيان أن يطلع على صورة
+                            حقيقية لتصميم الموقع.
+                        </p>
 
                     </div>
 
@@ -960,21 +980,35 @@
 
                     <div class="faq-box">
 
-                        <h5>Nibh sit amet aliquam commodo?</h5>
+                        <h5>هذا النص هو مثال لنص</h5>
 
-                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper nets suscipit ets lobotis nisle
-                            consequat nihis etim. Quis autem velis ets reprehender net etid quiste voluptate velite esse
-                            sedis.</p>
+                        <p>
+                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
+                            العربى، حيث يمكنك أن تولد مثل هذا
+                            النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.
+                            إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد،
+                            النص لن يبدو مقسما ولا يحوي
+                            أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير
+                            من الأحيان أن يطلع على صورة
+                            حقيقية لتصميم الموقع.
+                        </p>
 
                     </div>
 
                     <div class="faq-box">
 
-                        <h5>Elementum curabitur vitae?</h5>
+                        <h5>هذا النص هو مثال لنص</h5>
 
-                        <p>Utise wisi enim minim veniam, quis et stationes ullamcorper nets suscipit ets lobotis nisle
-                            consequat nihis etim. Quis autem velis ets reprehender net etid quiste voluptate velite esse
-                            sedis.</p>
+                        <p>
+                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
+                            العربى، حيث يمكنك أن تولد مثل هذا
+                            النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.
+                            إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد،
+                            النص لن يبدو مقسما ولا يحوي
+                            أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص، حيث يحتاج العميل فى كثير
+                            من الأحيان أن يطلع على صورة
+                            حقيقية لتصميم الموقع.
+                        </p>
 
                     </div>
 
@@ -1012,7 +1046,7 @@
                 <div class="col-md-6 margin-top-40">
 
                     <!--begin small-column-inside-->
-                    <div class="small-col-inside">
+                    <div class="container">
 
                         <!--begin contact-form-wrapper-->
                         <div class="contact-form-wrapper wow bounceIn text-right" data-wow-delay="0.5s"
@@ -1050,7 +1084,11 @@
                                         name="contact_message" placeholder="رسالتك">
                                     </textarea>
 
-                                    <input value="Get In Touch" class="contact-submit" type="submit">
+                                    <div class="row">
+                                        <div class="col-md-8 mx-auto">
+                                            <input value="Get In Touch" class="contact-submit" type="submit">
+                                        </div>
+                                    </div>
 
                                 </form>
                                 <!--end contact form -->
@@ -1090,7 +1128,7 @@
 
                     <i class="pe-7s-map-2"></i>
 
-                    <h5>Get In Touch</h5>
+                    <h5>هذا النص هو مثال لنص</h5>
 
                     <p>10 Oxford Street, London, UK, E1 1EC</p>
 
@@ -1106,9 +1144,9 @@
 
                     <i class="pe-7s-comment"></i>
 
-                    <h5>Social Media</h5>
+                    <h5>هذا النص هو مثال لنص</h5>
 
-                    <p>See bellow where you can find us.</p>
+                    <p>هذا النص هو مثال لنص</p>
 
                     <!--begin footer_social -->
                     <ul class="footer_social">
@@ -1136,7 +1174,7 @@
 
                     <i class="pe-7s-link"></i>
 
-                    <h5>Useful Links</h5>
+                    <h5>هذا النص هو مثال لنص</h5>
 
                     <a href="#" class="footer-links">Our Cookies Policy</a>
 
