--- a/quantity-cross-sell.html
+++ b/quantity-cross-sell.html
@@ -14,32 +14,92 @@
     <div class="d-flex align-items-center has-styled-gradient">
         <div class="d-flex align-items-center flex-column w-100">
             <img src="images/LOGO.png" height="100" width="100" alt="">
-            <div class="row my-5 w-100">
-                <div class="col-md-8 mx-auto">
-                    <div class="card text-center shadow-lg rounded-lg no-back">
-                        <div class="card-header pt-2 pb-2">
-                            <h1 class="my-3 text-danger"><i class="fas fa-exclamation"></i> إنتظر</h1>
-                        </div>
-                        <div class="card-body p-5">
-                            <h2 class="card-text">
-                                أروى تقدم لكم هدا العرض الحصري
-                                <br>
-                                اشتري 2 و احصل على خصم 40 درهم
-                            </h2>
-                            <div class="my-4">
-                                <img src="images/Group-7.png" class="w-75" alt="">
+            <div class="row my-5 w-100 flex-row-reverse">
+                <div class="col-md-4 mt-3">
+                    <div class="container">
+                        <div class="card text-center shadow-lg rounded-lg no-back">
+                            <div class="card-header pt-2 pb-2">
+                                <h1 class="my-3 text-danger"><i class="fas fa-exclamation"></i> إنتظر</h1>
                             </div>
-                            <div class="row">
-                                <div class="col-md-6 mx-auto">
-                                    <a href="#" class="btn btn-outline-success btn-block">
-                                        <i class="fas fa-shopping-cart"></i>
-                                        نعم، أريد الإستفادة من هذا العرض
-                                    </a>
-                                    <br>
-                                    <a href="" class="text-danger font-weight-bold">
-                                        <i class="fas fa-window-close"></i>
-                                        لا أريد الإستفادة من هذا العرض
-                                    </a>
+                            <div class="card-body p-5">
+                                <h2 class="card-text">
+                                    خود جوج واستفد من عرض 10%
+                                </h2>
+                                <div class="my-4">
+                                    <img src="images/Group-7.png" class="w-75" alt="">
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12 mx-auto">
+                                        <a href="#" class="btn btn-outline-success btn-block">
+                                            <i class="fas fa-shopping-cart"></i>
+                                            نعم، أريد الإستفادة من هذا العرض
+                                        </a>
+                                        <br>
+                                        <a href="" class="text-danger font-weight-bold">
+                                            <i class="fas fa-window-close"></i>
+                                            لا أريد الإستفادة من هذا العرض
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mt-3">
+                    <div class="container">
+                        <div class="card text-center shadow-lg rounded-lg no-back">
+                            <div class="card-header pt-2 pb-2">
+                                <h1 class="my-3 text-danger"><i class="fas fa-exclamation"></i> إنتظر</h1>
+                            </div>
+                            <div class="card-body p-5">
+                                <h2 class="card-text">
+                                    الى خديتي 2 صابو غادي تاخد الثالث بتخفيض 50%
+                                </h2>
+                                <div class="my-4">
+                                    <img src="images/Group-7.png" class="w-75" alt="">
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12 mx-auto">
+                                        <a href="#" class="btn btn-outline-success btn-block">
+                                            <i class="fas fa-shopping-cart"></i>
+                                            نعم، أريد الإستفادة من هذا العرض
+                                        </a>
+                                        <br>
+                                        <a href="" class="text-danger font-weight-bold">
+                                            <i class="fas fa-window-close"></i>
+                                            لا أريد الإستفادة من هذا العرض
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 mt-3">
+                    <div class="container">
+                        <div class="card text-center shadow-lg rounded-lg no-back">
+                            <div class="card-header pt-2 pb-2">
+                                <h1 class="my-3 text-danger"><i class="fas fa-exclamation"></i> إنتظر</h1>
+                            </div>
+                            <div class="card-body p-5">
+                                <h2 class="card-text">
+                                    الى خديتي ثلاثة صابو غادي تاخدالرابع فابور
+                                </h2>
+                                <div class="my-4">
+                                    <img src="images/Group-7.png" class="w-75" alt="">
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12 mx-auto">
+                                        <a href="#" class="btn btn-outline-success btn-block">
+                                            <i class="fas fa-shopping-cart"></i>
+                                            نعم، أريد الإستفادة من هذا العرض
+                                        </a>
+                                        <br>
+                                        <a href="" class="text-danger font-weight-bold text-righ">
+                                            <i class="fas fa-window-close"></i>
+                                            لا أريد الإستفادة من هذا العرض
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
